--- a/gallery.html
+++ b/gallery.html
@@ -127,6 +127,24 @@ function loadLogosFromFirebase() {
 
 // Start listening for logos as soon as the page loads
 loadLogosFromFirebase();
+    // gallery.html - inside loadLogosFromFirebase() function
+
+// ...
+for (const key in logosData) {
+    // CHANGE THIS LINE:
+    const { title, imageUrl, category } = logosData[key]; // Use imageUrl
+    const div = document.createElement("div");
+    div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
+    div.innerHTML = `
+        <img src="${imageUrl}" alt="${title}" class="w-full h-48 object-cover" /> // Use imageUrl
+        <div class="p-4">
+            <h3 class="text-xl font-bold mb-2">${title}</h3>
+            <p class="text-gray-300 mb-2">${category}</p>
+        </div>
+    `;
+    galleryGrid.appendChild(div);
+}
+//...
 </script>
 </body>
 </html>
