--- a/admin.html
+++ b/admin.html
@@ -106,7 +106,7 @@ const firebaseConfig = {
     authDomain: "thelogobucket-6389b.firebaseapp.com",
     databaseURL: "https://thelogobucket-6389b-default-rtdb.firebaseio.com",
     projectId: "thelogobucket-6389b",
-    storageBucket: "thelogobucket-6389b.firebasestorage.app" // <-- NOTE: Ensure this is correct in your Firebase console
+    storageBucket: "thelogobucket-6389b.firebasestorage.app", // <-- NOTE: Ensure this is correct in your Firebase console
     messagingSenderId: "237466771183",
     appId: "1:237466771183:web:4984a3b31ff5f266c4451a"
 };
