--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,7 @@ function loadLogosFromFirebase() {
             const div = document.createElement("div");
             div.className = "gallery-item bg-gray-800 rounded-lg overflow-hidden shadow-lg";
             div.innerHTML = `
-                <img src="${imageUrl}" alt="${title}" class="w-full h-48 object-cover" />
+                <img src="${imageUrl}" alt="${title}" class="w-full aspect-square object-cover" />
                 <div class="p-4">
                     <h3 class="text-xl font-bold mb-2">${title}</h3>
                     <p class="text-gray-300 mb-2">${category}</p>
