--- a/gallery.html
+++ b/gallery.html
@@ -51,7 +51,7 @@ transform: scale(1.05);
 </nav>
 <main class="pt-24 container mx-auto px-6">
 <h1 class="text-3xl font-bold mb-6">Logo Gallery</h1>
-<div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+<div id="galleryGrid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-4"></div>
 </main>
 <footer class="bg-black text-white py-6 mt-12">
 <div class="container mx-auto text-center">
